fixing vertical scrolling on mobile

--- a/custom.css
+++ b/custom.css
@@ -11,7 +11,9 @@ body {
   border-color: #c40000 !important;
 }
 
-
+html, body {
+  overflow-x: hidden;
+}
 
 /* =================================
    HERO SECTION
